--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-leaderboard": "^1.0.5",
     "react-native-maps": "^0.23.0",
     "react-navigation": "^3.0.9",
     "tcomb-form-native": "^0.6.20"
